--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
     "framer-motion": "^7.10.3",
     "google-map-react": "^2.2.1",
     "google-maps-react": "^2.0.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-compare-image": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-owl-carousel": "^2.3.3",
     "react-plx": "^2.1.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-scroll-horizontal": "^1.6.6",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "react-spring": "^9.7.3",
     "react-syntax-highlighter": "^15.5.0",
     "slick-carousel": "^1.8.1",
